--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ glib = "0.14.8"
 gstreamer = "0.17.4"
 gstreamer-player = "0.18.0"
 async-std = "1.10.0"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+duration-string = { version = "0.0.1" }
+anyhow = "1.0"
