--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
+xdg = "2.4.1"
+lazy_static = "1.4.0"
