--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ gstreamer = "0.17.4"
 gstreamer-player = "0.18.0"
 async-std = "1.10.0"
 reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
 xdg = "2.4.1"
