--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ async-std = "1.10.0"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 anyhow = "1.0"
 xdg = "2.4.1"
 lazy_static = "1.4.0"
