--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gtk = { version = "0.3.1", package = "gtk4", features = ["v4_4"]}
+gtk = { version = "0.4", package = "gtk4", features = ["v4_6"]}
 glib = "0.14.8"
 gstreamer = "0.17.4"
 gstreamer-player = "0.18.0"
@@ -18,3 +18,7 @@ serde_json = "1.0"
 anyhow = "1.0"
 xdg = "2.4.1"
 lazy_static = "1.4.0"
+
+[dependencies.adw]
+package = "libadwaita"
+version  = "0.1.1"
