--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde_json = "1.0"
 anyhow = "1.0"
 xdg = "2.4.1"
 lazy_static = "1.4.0"
+log = "0.4"
+pretty_env_logger = "0.4"
 
 [dependencies.adw]
 package = "libadwaita"
