--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,12 @@ edition = "2021"
 gtk = { version = "0.4", package = "gtk4", features = ["v4_6"]}
 gstreamer = "0.17.4"
 gstreamer-player = "0.18.0"
-async-std = "1.10.0"
-reqwest = { version = "0.11", features = ["json"] }
-tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-anyhow = "1.0"
 xdg = "2.4.1"
-lazy_static = "1.4.0"
 log = "0.4"
 pretty_env_logger = "0.4"
+rand = "0.8.5"
 
 [dependencies.adw]
 package = "libadwaita"
