--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ xdg = "2.4.1"
 log = "0.4"
 pretty_env_logger = "0.4"
 rand = "0.8.5"
+ureq = { version = "*" }
+anyhow = { version = "1.0" }
 
 [dependencies.adw]
 package = "libadwaita"
