--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ pretty_env_logger = "0.4"
 rand = "0.8.5"
 ureq = { version = "*" }
 anyhow = { version = "1.0" }
+lazy_static = "1.4.0"
 
 [dependencies.adw]
 package = "libadwaita"
